--- a/index.html
+++ b/index.html
@@ -26,5 +26,53 @@
             </ul>
         </nav>
     </header>
+    <main>
+        <section class="main-logo">
+           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ7GehYKdImLiMpzSon3pKKLVhwGS_S4Ssjj9WHNIfUYXZiyrzk7w&s" alt="">
+        </section>
+        <section class="main-input">
+            <div class="main-input-container">
+                <span class="search-icon">
+
+                </span>
+                <input type="text">
+                <a class="micro-icon" href=""></a>
+            </div>
+        </section>
+        <section class="main-buttons">
+            <div>
+                <button>Buscar con Google</button>
+            </div>
+            <div>
+                <button>Me siento con suerte</button>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <ul class="footer-left">
+            <li>
+                <a href="">Sobre Google</a>
+            </li>
+            <li>
+                <a href="">Publicidad</a>
+            </li>
+            <li><a href="">Negocios</a>
+            </li>
+            <li>
+                <a href="">Como funciona</a>
+            </li>
+        </ul>
+        <ul class="footer-right">
+            <li>
+                <a href="">Privacidad</a>
+            </li>
+            <li>
+                <a href="">Condiciones</a>
+            </li>
+            <li>
+                <a href="">Preferencias</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
